[package]
name = "locot"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/vacekj/locot"
repository = "https://github.com/vacekj/locot"
documentation = "https://docs.rs/locot"
description = "A simple utility to get Lines Of Code Over Time for a git repository. Outputs CSV for visualization and analysis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokei = "12.1.2"
git2 = "0.17.1"
tempfile = "3.5.0"
anyhow = "1.0.71"
csv = "1.2.2"
serde = "1.0.171"
chrono = { version = "0.4.35" , features = ["serde"]}
itertools = "0.12.1"
clap = { version = "4.5.2", features = ["derive"] }
